[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui/Minimap/minimap.png" type="Texture" id=1]
[ext_resource path="res://ui/MiniMap.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/Minimap/minimap_titlebg.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/Minimap/minimap_mapbg.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/Minimap/player_marker.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/Minimap/alert_marker.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/Minimap/enemy_marker.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/MainTheme.tres" type="Theme" id=8]

[node name="MiniMap" type="Control"]
margin_left = -101.0
margin_right = -101.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 2 )

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_right = 100.0
rect_min_size = Vector2( 100, 0 )

[node name="TitleBG" type="TextureRect" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 25 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="HBoxContainer/TitleBG"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
theme_type_variation = "Label_larger"
text = "Night 1"
align = 1
valign = 1

[node name="MinimapFrame" type="TextureRect" parent="HBoxContainer"]
margin_top = 29.0
margin_right = 100.0
margin_bottom = 129.0
texture = ExtResource( 1 )

[node name="MapBG" type="TextureRect" parent="HBoxContainer/MinimapFrame"]
show_behind_parent = true
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 81 )
texture = ExtResource( 4 )
stretch_mode = 2

[node name="PlayerMarker" type="Sprite" parent="HBoxContainer/MinimapFrame/MapBG"]
position = Vector2( 39, 30 )
texture = ExtResource( 5 )

[node name="EnemyMarker" type="Sprite" parent="HBoxContainer/MinimapFrame/MapBG"]
position = Vector2( 27, 18 )
texture = ExtResource( 7 )

[node name="AlertMarker" type="Sprite" parent="HBoxContainer/MinimapFrame/MapBG"]
position = Vector2( 43, 55 )
texture = ExtResource( 6 )
